<resources>
    <string name="app_name">TherapyApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="device_fragment_label">Устройства</string>
    <string name="subgroup_fragment_label">Возбудители</string>
    <string name="data_fragment_label">Данные о терапии</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="StopScan">Остановить</string>
    <string name="Scan">Сканировать</string>
    <string name="hello">Для поиска устройств нажмите на кнопку Bluetooth</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_data">DataActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group">GroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="file_id_t">Признак формата</string>
    <string name="file_id_q">4 символа</string>
    <string name="file_id_e">Формат группы должен быть типа "EG**"</string>
    <string name="title_t">Название группы</string>
    <string name="title_q">Максимум 15 символов</string>
    <string name="time_t">Общее время группы</string>
    <string name="time_q">0 - 65535, 0 - бесконечно</string>

    <string name="mode_t">Режим исполнения группы:</string>
    <string name="mode_serial">Последовательное исполнение</string>
    <string name="mode_cycle">Циклическое исполнение</string>
    <string name="mode_complex">Комплексное исполнение</string>

    <string name="spre_t">Расширение спектра программ:</string>
    <string name="spre_q">0 = «Выкл», 1 = «Вкл-1», 2 = «Вкл-2» </string>
    <string name="maxf_t">Ограничение частоты, Гц:</string>
    <string name="maxf_q">0 = «15к», 1 = «1100», 2 = «1200», 3 = «1500»</string>
    <string name="cnt_t">Число шагов в группе</string>
    <string name="cnt_q">0 – группа пуста </string>
    <string name="type_t">Тип записи</string>
    <string name="type_q">“f”,“d”,“m”,“p” – программа из справочника EB00 (см.)</string>
    <string name="freq_id_t">Код программы</string>
    <string name="freq_id_q">Код программы в справочнике, 1.. </string>
    <string name="freq_id_b">Справочник кодов</string>
    <string name="ampl_t">Амплитуда</string>
    <string name="ampl_q">0 – 100 </string>
    <string name="step_time_t">Время шага</string>
    <string name="step_time_q">0 – 65535  </string>
    <string name="code_title">Справочник кодов</string>
    <string name="edit_save">Сохранить изменения</string>
    <string name="delete_group">Удалить группу</string>
    <string name="edit_steps">Редактировать шаги</string>
    <string name="add_group">Добавить группу</string>
    <string name="cancel_group">Отменить</string>
    <string name="del_group_alert">Удаление группы</string>
    <string name="group_mes">Вы уверены?</string>
    <string name="save_group_alert">Сохранение группы</string>
    <string name="add_group_alert">Добавление группы</string>
    <string name="reset_alert">Уведомление</string>
    <string name="reset_mes">После добавления или редактирования группы необходимо сбросить аппарат в исходное состояние</string>
    <string name="device_already_paired">Device already paired</string>
    <string name="group_settings">Настройки группы</string>
    <string name="eddEpt">Добавить воздействие</string>
    <string name="mode_q_serial">Шаги STEP исполняются один за другим однократно с указанными для каждого из них
        параметрами. В поле TIME сохраняется сумма длительностей всех шагов группы. Если имеется хотя бы один шаг с
        нулевой длительностью или суммарная длительность шагов превышает 65535 сек, то TIME устанавливается в 0.
    </string>
    <string name="mode_q_cycle">Шаги STEP исполняются один за другим с указанными для каждого из них параметрами, по
        завершению последнего шага исполнение продолжается с первого шага. Терапия завершается по истечению времени
        TIME, которое указывается произвольно, вне зависимости от завершенности текущего шага.
    </string>
    <string name="mode_q_complex">Все шаги STEP исполняются одновременно в режиме комплексного исполнения частот. Для всех
        шагов используется интенсивность первого шага, остальные интенсивности не проверяются и не учитываются. Терапия
        завершается по истечению времени TIME, которое указывается произвольно. Длительности шагов не учитываются.
    </string>
</resources>