<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="280dp"
                android:maxHeight="400dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/linear_ept"
                android:layout_marginTop="10dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@id/linear_add"
                android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ept_list"
                    app:layoutManager="LinearLayoutManager"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/linear_add"
                android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_ept"
                android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@id/linear_settings"
                android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/add_ept"
                    android:text="@string/eddEpt"
            />



        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/linear_settings"
                android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_ept"
                android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@id/linear_save"
                android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/group_settings"
                    android:text="@string/group_settings"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/linear_save"
                android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_settings"
                android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/save_group"
                    android:text="@string/edit_save"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/linear_del"
                android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_settings"
                android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">


            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/delete_group"
                    android:text="@string/delete_group"
                    />
        </LinearLayout>
    </LinearLayout>
</ScrollView>



