<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:minWidth="300dp"
android:maxWidth="600dp"
android:minHeight="300dp"
android:maxHeight="520dp"
>

<LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.15"
        android:id="@+id/linear_type"
        android:layout_marginTop="0dp" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@id/linear_freq_id"
        android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

    <ImageButton
            android:layout_width="wrap_content"
            android:minWidth="36dp"
            android:maxWidth="96dp"
            android:layout_height="match_parent"
            android:src="@drawable/question_mark"
            android:scaleType="fitCenter"
            android:id="@+id/type_q"
            android:background="@color/white"
            android:layout_marginStart="0dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="@+id/type_t"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="80dp"
            android:maxWidth="160dp"
            android:id="@+id/type_t"
            android:text="@string/type_t"
            android:textSize="16sp"
            android:gravity="fill_vertical"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/type_q"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
            android:layout_width="wrap_content"
            android:minWidth="300dp"
            android:maxWidth="400dp"
            android:layout_height="match_parent"
            android:id="@+id/type_s"
            android:gravity="fill_vertical"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/type_t"
            android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"/>
</LinearLayout>

<LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.15"
        android:id="@+id/linear_freq_id"
        android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_type"
        android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@id/linear_ampl"
        android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

    <ImageButton
            android:layout_width="wrap_content"
            android:minWidth="36dp"
            android:maxWidth="96dp"
            android:layout_height="match_parent"
            android:src="@drawable/question_mark"
            android:scaleType="fitCenter"
            android:id="@+id/freq_id_q"
            android:background="@color/white"
            android:layout_marginStart="0dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="@+id/freq_id_t"/>

    <TextView
            android:layout_width="wrap_content"
            android:minWidth="80dp"
            android:maxWidth="160dp"
            android:layout_height="match_parent"
            android:id="@+id/freq_id_t"
            android:textSize="16sp"
            android:text="@string/freq_id_t"
            android:gravity="fill_vertical"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/freq_id_q"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:maxWidth="240dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:inputType="number"
            android:id="@+id/freq_id_e"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/freq_id_t"
            android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"/>
</LinearLayout>

<LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.15"
        android:id="@+id/linear_ampl"
        android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_freq_id"
        android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@id/linear_step_time"
        android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

    <ImageButton
            android:layout_width="wrap_content"
            android:minWidth="36dp"
            android:maxWidth="96dp"
            android:layout_height="match_parent"
            android:src="@drawable/question_mark"
            android:scaleType="fitCenter"
            android:id="@+id/ampl_q"
            android:background="@color/white"
            android:layout_marginStart="0dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="@+id/ampl_t"/>

    <TextView
            android:layout_width="wrap_content"
            android:minWidth="80dp"
            android:maxWidth="160dp"
            android:layout_height="match_parent"
            android:id="@+id/ampl_t"
            android:text="@string/maxf_t"
            android:textSize="16sp"
            android:gravity="fill_vertical"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/ampl_q"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="wrap_content"
            android:minWidth="160dp"
            android:maxWidth="300dp"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/ampl_e"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/ampl_t"
            android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"/>


</LinearLayout>

<LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.15"
        android:id="@+id/linear_step_time"
        android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_ampl"
        android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/linear_code"
        android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">

    <ImageButton
            android:layout_width="wrap_content"
            android:minWidth="36dp"
            android:maxWidth="96dp"
            android:layout_height="match_parent"
            android:src="@drawable/question_mark"
            android:scaleType="fitCenter"
            android:id="@+id/step_time_q"
            android:background="@color/white"
            android:layout_marginStart="0dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="@+id/step_time_t"/>

    <TextView
            android:layout_width="wrap_content"
            android:minWidth="160dp"
            android:maxWidth="300dp"
            android:layout_height="match_parent"
            android:id="@+id/step_time_t"
            android:text="@string/step_time_t"
            android:textSize="16sp"
            android:gravity="fill_vertical"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/step_time_q"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="wrap_content"
            android:minWidth="160dp"
            android:maxWidth="300dp"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/step_time_e"
            android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/step_time_t"
            android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"/>
</LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.15"
            android:id="@+id/linear_code"
            android:layout_marginTop="0dp" app:layout_constraintTop_toBottomOf="@id/linear_step_time"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent">
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/freq_id_b"
                android:textSize="16sp"
                android:id="@+id/freq_id_b"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>



